# comment-generator

./: .env_local  README.md  build_windows_exe.ps1  config.toml  prompts.toml  pyproject.toml  setup.py
comment_generator/: config_toml.py  main.py
comment_generator/backend/: code_comment.py  code_comment_togetherai.py  code_commentor_tool.py  comment_files.py  extract_code_service.py  gpt_code_comment.py  python_files.py  together_ai_streaming.py
comment_generator/cli_services/: cli_config.py  extract_code_service.py  format_service.py  pylint_services.py
comment_generator/configuration/: config.py  toml_support.py
