[tool.poetry]
name = "comment-generator"
version = "0.1.0"
description = ""
authors = ["SayaleeDamle <sayalee.damle@onepointltd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
openai = "^1.3.5"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
transformers = "4.31.0"
sentencepiece = "^0.1.99"
ninja = "^1.11.1.1"
cuda-python = "^12.3.0"
packaging = "^23.2"
torch = "^2.1.1"
tomli = "^2.0.1"
together = "^0.2.8"
chainlit = "^0.7.301"
pylint = "^3.0.2"
openpyxl = "^3.1.2"
sseclient-py = "^1.8.0"
black = "^23.11.0"
click = "^8.1.7"
toml = "^0.10.2"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
