[tool.poetry]
name = "comment-generator"
version = "0.1.0"
description = ""
authors = ["SayaleeDamle <sayalee.damle@onepointltd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
openai = "^1.3.5"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
transformers = "4.31.0"
sentencepiece = "^0.1.99"
ninja = "^1.11.1.1"
cuda-python = "^12.3.0"
packaging = "^23.2"
torch = "^2.1.1"
tomli = "^2.0.1"
together = "^0.2.8"
pylint = "^3.0.2"
openpyxl = "^3.1.2"
sseclient-py = "^1.8.0"
click = "^8.1.7"
toml = "^0.10.2"
mypy = {extras = ["mypyc"], version = "^1.7.1"}
yapf = "^0.40.2"





[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
